fixed z-index, padding section hero and mobile menu contacts

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,6 +189,7 @@ button {
 .mobile-menu {
   position: fixed;
   top: 0;
+  z-index: 999;
   left: 0;
   width: 100%;
   height: 100%;
@@ -224,7 +225,7 @@ button {
 
   .mobile-nav-menu {
     margin-bottom: auto;
-    margin-top: 72px;
+   
     
   }
    .nav-link-mobile{
@@ -275,8 +276,7 @@ button {
 
 .contacts-list-mobile{
     display: flex;
-    flex-direction: column-reverse;
-    flex-wrap: wrap;
+      flex-wrap: wrap;
     gap: 24px;
 }
 .contacts-link-mobile{
@@ -404,6 +404,7 @@ button {
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 768px;
+     padding: 112px 0;
    
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
@@ -421,7 +422,7 @@ button {
   line-height: 1.07;
   letter-spacing: 0.02em;
     margin-bottom: 36px;
-     padding: 112px 0;
+    
        
   }
  
@@ -656,6 +657,12 @@ font-size: 16px;
     gap: 64px 24px;
   }
 }
+@media screen and (min-width: 1158px) {
+  .about-our-team {
+  padding: 120px 0;
+}
+}
+
 
 /* ============= PORTFOLIO section 4 ========== */
 
